YEP-79: Create route to get hike geometies
